--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Easy release
 on:
   workflow_dispatch:
     inputs:
@@ -18,15 +18,22 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
-      - name: Easy release call
-        id: easy-release
-        uses: arthurhovhannisyan31/easy-release-action@develop
+      - name: Easy merge
+        id: easy-merge
+        uses: arthurhovhannisyan31/easy-merge-action@develop
         env:
           PAT: ${{ secrets.GITHUB_TOKEN }}
         with:
           source_branch: "develop"
           target_branch: "main"
           release_type: ${{ inputs.release_type }}
+      - name: Easy release
+        id: easy-release
+        uses: arthurhovhannisyan31/easy-release-action@develop
+        env:
+          PAT: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          branch: "main"
       - name: Log outputs
         run: |
           echo ${{ steps.easy-release.outputs.release_tag }}
