--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
         id: easy-merge
         uses: arthurhovhannisyan31/easy-merge-action@develop
         env:
-          PAT: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           source_branch: "develop"
           target_branch: "main"
@@ -31,7 +31,8 @@ jobs:
         id: easy-release
         uses: arthurhovhannisyan31/easy-release-action@develop
         env:
-          PAT: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         with:
           branch: "main"
       - name: Log outputs
