--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "@actions/github": "^6.0.0"
+    "@actions/github": "^6.0.0",
+    "@slack/web-api": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2",
