update workflow file

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,9 +33,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-          SLACK_CHANNEL: ${{ secrets.SLACK_CHANNEL }}
         with:
           branch: "main"
+          slack-channel: ${{ env.SLACK_CHANNEL }}
       - name: Log outputs
         run: |
           echo Released tag: ${{ steps.easy-merge.outputs.release_tag }}
