--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "author": "Arthur Hovhannisyan",
-  "name": "easy-release-action",
+  "private": true,
+  "name": "@arthurhovhannisyan31/easy-release-action",
   "type": "module",
   "packageManager": "yarn@4.6.0",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:arthurhovhannisyan31/easy-release-action.git"
+  },
   "scripts": {
     "build": "yarn ncc build ./src/index.ts -m --license licenses.txt",
     "lint": "yarn eslint '**/*.{js,ts,tsx}' --cache --quiet",
@@ -14,7 +19,8 @@
   },
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "@actions/github": "^6.0.0"
+    "@actions/github": "^6.0.0",
+    "@slack/web-api": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2",
